Modernize for loops and streams